--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>vai ser uma imagem aqui</h1>
+       <img src="alura-start.jpg" alt="logo da alura start">
         <ul>
             <li>escola</li>
             <li>estudante</li>
         </ul>
     </header>
+
    
 </body>
 </html>
