--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-       <img src="alura-start.jpg" alt="logo da alura start">
+       <img class="cabeçario-imagem"alura-start.jpg" alt="logo da alura start">
         <ul>
             <li>escola</li>
             <li>estudante</li>
