--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header> class="cabeçario"
        <img class="cabeçario-imagem"alura-start.jpg" alt="logo da alura start">
-        <ul>
+        <ul class="cabeçario-lista">
             <li>escola</li>
             <li>estudante</li>
         </ul>
