--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipe Alura Start</title>
+    <title>Alura Start</title>
     <link rel="stylesheet" href="style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="alura-start.jpg" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
@@ -20,8 +21,7 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-um"> O colégio Estadual Manoel Antonio Gomes leva esse nome pois na época foi um político muito importante para a região, a obra do colégio iniciou-se no ano de 1960 e foi concluída em 1982, ao longo dos anos várias pessoas administraram o colégio, atualmente o diretor é o Iris Roque Junior Váz.</p>
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
