--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="" alt="foto da mariáh">
-            <h3 class="estudante-nome">mariáh</h3>
+            <img class="estudante-imagem" src="" alt="foto da Mariáh">
+            <h3 class="estudante-nome">Mariáh</h3>
             <a href="insta"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="" alt="foto da lauany">
-            <h3 class="estudante-nome">lauany</h3>
+            <img class="estudante-imagem" src="" alt="foto da Lauany">
+            <h3 class="estudante-nome">Lauany</h3>
             <a href="insta"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="" alt="foto da sabrina">
-            <h3 class="estudante-nome"> sabrina</h3>
+            <img class="estudante-imagem" src="" alt="foto da Sabrina">
+            <h3 class="estudante-nome"> Sabrina</h3>
             <a href="instagram"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <span></span>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="" alt="foto da Rayane">
-            <h3 class="estudante-nome">rayane</h3>
+            <h3 class="estudante-nome">Rayane</h3>
             <a href="instagram"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
