--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2 class="escola-titulo">Sobre a Escola</h2>
             <p class="escola-texto-um"> O colégio Estadual Manoel Antonio Gomes leva esse nome pois na época foi um político muito importante para a região, a obra do colégio iniciou-se no ano de 1960 e foi concluída em 1982, ao longo dos anos várias pessoas administraram o colégio, atualmente o diretor é o Iris Roque Junior Váz.</p>
         </div>
-        <img class="escola-imagem" src="" alt="imagem que representa a escola">
+        <img class="escola-imagem" src="formatura-cemag.jpg" alt="imagem que representa a escola">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem somos nossos?</h2>
