--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="" alt="foto da Mariáh">
+            <img class="estudante-imagem" src="mariah.jpg" alt="foto da Mariáh">
             <h3 class="estudante-nome">Mariáh</h3>
             <a href="insta"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
