--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="insta"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="lauany.avif" alt="foto da Lauany">
+            <img class="estudante-imagem" src="lauaaany.jpg" alt="foto da Lauany">
             <h3 class="estudante-nome">Lauany</h3>
             <a href="insta"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
@@ -52,7 +52,7 @@
             <a href="instagram"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="sara.jpg" alt="foto da Sara">
+            <img class="estudante-imagem" src="saaaa.jpg" alt="foto da Sara">
             <h3 class="estudante-nome">Sara</h3>
             <a href="instagra"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
