--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="Rayane.png" alt="foto da Rayane">
             <h3 class="estudante-nome">Rayane</h3>
-            <a href="instagram"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/raya.ne7456?igsh=MXBiZzRiODR1d3dhbA"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="saaaa.jpg" alt="foto da Sara">
