--- a/index.html
+++ b/index.html
@@ -32,29 +32,29 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="mariah.jpg" alt="foto da Mariáh">
             <h3 class="estudante-nome">Mariáh</h3>
-            <a href="insta"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="insta"><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="lauaaany.jpg" alt="foto da Lauany">
             <h3 class="estudante-nome">Lauany</h3>
-            <a href="insta"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="insta"><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="sabrina.jpg" alt="foto da Sabrina">
             <h3 class="estudante-nome"> Sabrina</h3>
-            <a href="instagram"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="instagram"><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
         </div>
         <span></span>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Rayane.png" alt="foto da Rayane">
             <h3 class="estudante-nome">Rayane</h3>
-            <a href="https://www.instagram.com/raya.ne7456?igsh=MXBiZzRiODR1d3dhbA=="><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/raya.ne7456?igsh=MXBiZzRiODR1d3dhbA=="><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="saaaa.jpg" alt="foto da Sara">
             <h3 class="estudante-nome">Sara</h3>
-            <a href="instagra"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="instagra"><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
         </div>
         <span></span>
         <span></span>
