--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="mariah.jpg" alt="foto da Mariáh">
             <h3 class="estudante-nome">Mariáh</h3>
-            <a href="insta"><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/mariah_pontess?igsh=MXhhNWpzdTZpdmQ5Zg=="><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="lauaaany.jpg" alt="foto da Lauany">
             <h3 class="estudante-nome">Lauany</h3>
-            <a href="insta"><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/lauanny_annny?igsh=Z2FmcDJ4c3kzYnNr"><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="sabrina.jpg" alt="foto da Sabrina">
             <h3 class="estudante-nome"> Sabrina</h3>
-            <a href="instagram"><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/saahh__g?igsh=aDlvZzFpZmltYXFv"><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
         </div>
         <span></span>
         <span></span>
@@ -54,7 +54,7 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="saaaa.jpg" alt="foto da Sara">
             <h3 class="estudante-nome">Sara</h3>
-            <a href="instagra"><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/sarah__eloiza?igsh=MTFoOGtkYjU1amZ3ag=="><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
         </div>
         <span></span>
         <span></span>
