--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-imagem"src="alura-start" alt="logo da alura start">
+        <img class="rodape-imagem"src="alura-start.jpg" alt="logo da alura start">
     </footer>
 </body>
 </html>
