--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="saaaa.jpg" alt="foto da Sara">
             <h3 class="estudante-nome">Sara</h3>
-            <a href="https://www.instagram.com/sarah__eloiza?igsh=MTFoOGtkYjU1amZ3ag=="><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/sarah__eloiza?igsh=MTFoOGtkYjU1amZ3ag"><img class="estudante-icone" src="instagram.jpg" alt="icone instagram"></a>
         </div>
         <span></span>
         <span></span>
