--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alura-start.jpg" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="Alura-start.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
@@ -61,7 +61,7 @@
     </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-imagem"src="alura-start" alt="logo da alura start">
+        <img class="rodape-imagem"src="Alura-start" alt="logo da alura start">
     </footer>
 </body>
 </html>
