--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img class="escola-imagem" src="formatura-cemag.jpg" alt="imagem que representa a escola">
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem somos nossos?</h2>
+        <h2 class="estudante-titulo">Quem somos nosso?</h2>
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
